--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,35 @@
 /* profile image */
+
 * img{
     display: block;
-    margin: auto;
+    
 }
 
 .card-header img{
     width: 20rem;
     height: 20rem;
+    margin:auto;
 }
 
 #projects .card img{
-    width: 8rem;
-    height: 6rem;
-
+    max-width: 13rem;
+    min-width: 13rem;
+    max-height: 100%;
+    min-height: 10rem;
 }
 #projects .card {
-    min-height: 20rem;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+   display: flex;
+   align-items: center;
+}
+#projects .card:hover{
+    box-shadow: 3px 11px 20px 5px rgba(0,0,0,0.2);
+}
+#projects .card {
+    min-height: 25rem;
+    max-height: 25rem;
+
 }
 
 /* list of the skills and social media accounts */
@@ -37,52 +51,51 @@ li img {
  height: 5.5rem;
 }
 
-.skills-contact ul li .fa-python{
+.fa-python{
     color:#3775A9;
 }
 
-.skills-contact ul li .fa-java{
+ .fa-java{
     color: #4A8BC6;
 }
 
-.skills-contact ul li .fa-js-square{
+.fa-js-square{
     color: #F5DE19;
 }
 
-.skills-contact ul li .fa-html5{
+ .fa-html5{
     color: #E44D26;
 }
 
-.skills-contact ul li .fa-css3-alt{
+ .fa-css3-alt{
     color: #32A4D6;
 }
 
-
-.skills-contact ul li .fa-sass{
+ .fa-sass{
     color: #DE9CBE;
 }
 
-.skills-contact ul li .fa-react{
+ .fa-react{
     color: #74D9F5;
 }
 
-.skills-contact ul li .fa-github{
+.fa-github{
     color: black;
 }
 
-.skills-contact ul li .fa-reddit{
+.fa-reddit{
     color: #E44D26;
 }
 
-.skills-contact ul li .fa-free-code-camp{
+ .fa-free-code-camp{
     color: green;
 }
 
-.skills-contact ul li .fa-hackerrank{
+ .fa-hackerrank{
     color: green;
 }
 
-.skills-contact ul li .fa-codepen{
+ .fa-codepen{
     color: black;
 }
 
