delete border for main and add modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 /* profile image */
-
+#main .card{
+    border: none;
+}
 * img{
     display: block;
     
@@ -30,6 +32,25 @@
     min-height: 25rem;
     max-height: 25rem;
 
+}
+/* nav */
+.nav-item {
+    color: black;
+}
+/*modal */
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+  }
+.modal-body img{
+    width: 95%;
+    margin: auto;
+}
+
+.modal-body p{
+    margin-top: 3rem;
+    font-size: larger;
 }
 
 /* list of the skills and social media accounts */
