--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: myFirstFont;
+    src: url(../fonts/Inconsolata-VariableFont_wdth\,wght.ttf);
+  }
+body *{
+    font-family:myFirstFont;
+}
 /* profile image */
 #main .card{
     border: none;
@@ -13,26 +20,44 @@
     margin:auto;
 }
 
-#projects .card img{
+#projects .card #project-img{
     max-width: 13rem;
     min-width: 13rem;
     max-height: 100%;
     min-height: 10rem;
 }
 #projects .card {
+    min-height: 25rem;
+    max-height: 25rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
    display: flex;
+   
    align-items: center;
+   
 }
 #projects .card:hover{
     box-shadow: 3px 11px 20px 5px rgba(0,0,0,0.2);
 }
-#projects .card {
-    min-height: 25rem;
-    max-height: 25rem;
 
+
+#projects .card .tech {
+    display:flex;
+    margin: auto;
+    
 }
+ .tech img{
+    max-width: 2rem;
+}
+.tech img, .tech i{
+    margin: 0.3em;
+}
+
+
+#projects .card .btn{
+  width: fit-content;
+}
+
 /* nav */
 .nav-item {
     color: black;
@@ -40,7 +65,7 @@
 /*modal */
 @media only screen and (max-width: 600px) {
     body {
-      background-color: lightblue;
+      
     }
   }
 .modal-body img{
@@ -67,7 +92,7 @@
     text-align: center;
 }
 
-li img {
+.skills-contact li img {
  width: 5.5rem;
  height: 5.5rem;
 }
