--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,19 @@
     font-family: myFirstFont;
     src: url(../fonts/Inconsolata-VariableFont_wdth\,wght.ttf);
   }
-body *{
+body, #main .card-body{
     font-family:myFirstFont;
+    background-color: #F7F7F7;
+    
+}
+
+
+/* side */
+#side .card{
+
 }
 /* profile image */
-#main .card{
+.card{
     border: none;
 }
 * img{
@@ -20,23 +28,25 @@ body *{
     margin:auto;
 }
 
-#projects .card #project-img{
+#projects #main-img{
     max-width: 13rem;
     min-width: 13rem;
     max-height: 100%;
     min-height: 10rem;
+    border: none;
 }
 #projects .card {
     min-height: 25rem;
     max-height: 25rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    margin-top:4rem ;
    display: flex;
    
    align-items: center;
    
 }
-#projects .card:hover{
+#projects .card:hover, #skills .card:hover{
     box-shadow: 3px 11px 20px 5px rgba(0,0,0,0.2);
 }
 
@@ -46,7 +56,7 @@ body *{
     margin: auto;
     
 }
- .tech img{
+.tech img{
     max-width: 2rem;
 }
 .tech img, .tech i{
@@ -58,15 +68,46 @@ body *{
   width: fit-content;
 }
 
+/* skills */
+#skills  #main-img{
+    width:7rem;
+    height: auto;
+    position: absolute;
+    top: -4rem;
+    border: solid 1px white;
+    border-radius: 50%;
+    background-color: white;
+    
+}
+#skills .card {
+    min-height: 16rem;
+    max-height: 16rem;
+    max-width: 14rem;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    display: flex;
+    margin-top:8rem ;
+   align-items: center;
+   
+}
+#skills .card-title{
+    margin-top: 5rem;
+}
+
+
+
 /* nav */
 .nav-item {
     color: black;
 }
 /*modal */
 @media only screen and (max-width: 600px) {
-    body {
-      
-    }
+   #skills  .col-md-4{
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+   }
   }
 .modal-body img{
     width: 95%;
@@ -93,8 +134,8 @@ body *{
 }
 
 .skills-contact li img {
- width: 5.5rem;
- height: 5.5rem;
+ width: 4.5rem;
+ height: 4.5rem;
 }
 
 .fa-python{
