--- a/new/src/pages/home/projects/projects.css
+++ b/new/src/pages/home/projects/projects.css
@@ -1,10 +1,18 @@
 #home-projects-container div.card{
     background-color: transparent;
     border: 0;
+    cursor: pointer;
+    height: 80%;
     
 }
 #home-projects-container div.card-body{
     background-color: transparent;
     padding:0.5em 0 0 0;
     
+}
+
+  
+img {
+height: 100%;
+max-height: 100%;
 }
