--- a/new/src/index.css
+++ b/new/src/index.css
@@ -20,12 +20,12 @@ code {
   color:white;
 }
 .full-width-back-image{
-  min-width: 100%;
+  min-width: 100vw;
   min-height: 100vh;
   position: absolute;
   top: 0;
   z-index: 0;
-  opacity: 0.1;
+  opacity: 0.07;
 
 }
 /* width and heights */
