reafactor : delete old site

--- a/new/src/pages/projects/project/project.css
+++ b/new/src/pages/projects/project/project.css
@@ -9,3 +9,10 @@
     width: 30vw;
     bottom: auto;
 }
+#project-page .image-container{
+    height: auto;
+}
+
+#project-page .image-container img{
+    height: auto;
+}
