--- a/src/components/cards/projectCard/project.css
+++ b/src/components/cards/projectCard/project.css
@@ -1,5 +1,8 @@
 #project-card {
     cursor: pointer;
+    min-height: 10rem;
+    max-height: 10rem;
+    position: relative;
 }
 
 #project-card  div.col-md-4{
@@ -12,6 +15,7 @@
 
 #project-card img.img-thumbnail{
     position: relative;
+    height: 100%;
     min-width: 100%;
     min-height: 100%;
     bottom: 0;
@@ -24,4 +28,12 @@
     bottom: 0;   
     text-align: center;
     width: 100%; 
+}
+#project-card .tags{
+    font-size: x-small;    
+}
+
+#project-card:hover .text{
+   background-color: antiquewhite;
+   color: black;
 }
