--- a/src/index.css
+++ b/src/index.css
@@ -1,71 +1,76 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  padding:0;
-  max-width: 100vw;
-  overflow-x: hidden;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    padding: 0;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
 }
 
 /* backgrounds */
-.bg-b-to-b{
-  background : linear-gradient(30deg, #010A12 20%, #24314B 70%);
-  color:white;
+.bg-b-to-b {
+    background: linear-gradient(30deg, #010a12 20%, #24314b 70%);
+    color: white;
 }
-.full-width-back-image{
-  min-width: 100vw;
-  min-height: 100vh;
-  position: absolute;
-  top: 0;
-  z-index: 0;
-  opacity: 0.07;
-
+.full-width-back-image {
+    min-width: 100vw;
+    min-height: 100vh;
+    position: absolute;
+    top: 0;
+    z-index: 0;
+    opacity: 0.07;
 }
 /* width and heights */
-.min-h-100{
-  min-height: 100vh;
-
+.min-h-100 {
+    min-height: 100vh;
 }
 
-
-
-.w-30{
-  max-width: 30%;
+.w-30 {
+    max-width: 30%;
 }
 
 /* font colors */
-.f-c-g{
-  color: #B4833A;
+.f-c-g {
+    color: #b4833a;
 }
-.f-c-gr-1{
-  color: #ccc7be;
+.f-c-gr-1 {
+    color: #ccc7be;
 }
 /* fonts size */
-.header-main-text-size{
-  font-size: xx-large;
+.header-main-text-size {
+    font-size: xx-large;
 }
 
-.header-sec-text-size{
-  font-size: medium;
+.header-sec-text-size {
+    font-size: medium;
 }
-
-
-
-
 
 /* widths */
-.w-80{
-  width: 80%;
-  max-width: 80%;
+.w-80 {
+    width: 80%;
+    max-width: 80%;
 }
-hr{
-  color: #B4833A;
+hr {
+    color: #b4833a;
+}
+
+/* mobile */
+
+@media (max-width: 50rem) {
+    #home-projects-container , .hide-mobile{
+      display: none;
+     }
+    .full-width-back-image {
+        max-width: 100%;
+        min-width:auto;
+        min-height: auto;
+    }
 }
