--- a/src/components/navs/sidenav/side.css
+++ b/src/components/navs/sidenav/side.css
@@ -1,8 +1,6 @@
 #side-nav{
     background :  #031d33;
-    position: absolute;
     top: 0;
-    min-height: 100vh;
     padding-left: 1em;
 }
 #side-nav #side-nav-header{
@@ -11,4 +9,49 @@
 #my-name{
     font-size:0.8em;
     font-weight: bold;
+}
+
+
+@media (max-width:48rem){
+
+    #side-nav{
+        
+        position: fixed;
+        max-height: fit-content;
+        min-height: 110vh;
+        min-width: 60%;
+        max-width: 60%;
+        z-index: 4;
+    }
+
+  
+    #side-nav-header div.row{
+    
+        margin-right: auto;
+        display: flex;
+        flex-direction: row;
+       
+    }
+    #side-nav-header div.row div{
+        padding-left: 0;
+    }
+    #side-nav-header #my-name{
+        margin-top: 1em;
+        font-size: small;
+        max-width: 60%;
+    }
+   
+    #side-nav-header div.row div img{
+        max-width: 4em ;
+        padding-left: 0;
+    }
+    #side-nav-header {
+        padding-left: 0.7em;      
+    }
+
+    #side-nav-header .col-sm-2{
+        max-width: 40%; 
+        padding-right: 0;       
+        
+    }
 }
