feat : show side bar on click

--- a/src/components/navs/sidenav/side.css
+++ b/src/components/navs/sidenav/side.css
@@ -1,6 +1,8 @@
 #side-nav{
-    background :  #031d33;
+    background: #031d33;
+    position: absolute;
     top: 0;
+    min-height: 100vh;
     padding-left: 1em;
 }
 #side-nav #side-nav-header{
